--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="#EAEBF3"
     tools:context=".MainActivity">
 
     <!-- Toolbar with App Name & Profile Icon -->
@@ -13,14 +14,33 @@
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:title="Intel Class"
-        app:titleTextColor="@android:color/white"
+        android:background="@color/white"
+        app:titleTextColor="#3F51B5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_default="wrap">
 
+        <TextView
+            android:id="@+id/profile_text"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="start"
+            android:padding="8dp"
+            android:src="@drawable/img"
+            android:textSize="17dp"
+            android:textFontWeight="600"
+            android:textStyle="bold"
+            android:text="Plus two science (kerala board) "
+            android:textColor="#3B4DB2"
+            android:contentDescription="Profile" />
+        <ImageView
+            android:id="@+id/down_arrow"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:padding="6dp"
+            android:src="@drawable/down_arrow"
+            android:contentDescription="Profile" />
         <!-- Profile Icon -->
         <ImageView
             android:id="@+id/profile_icon"
@@ -28,161 +48,286 @@
             android:layout_height="40dp"
             android:layout_gravity="end"
             android:padding="8dp"
-            android:src="@android:drawable/ic_menu_myplaces"
+            android:src="@drawable/img"
             android:contentDescription="Profile" />
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- GridLayout for Subjects -->
-    <androidx.gridlayout.widget.GridLayout
-        android:id="@+id/gridLayout"
-        android:layout_width="0dp"
+
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:columnCount="2"
-        app:rowCount="2"
-        android:layout_marginTop="16dp"
-        android:gravity="center">
+            android:id="@+id/daily_class_card"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@id/toolbar">
 
-        <!-- Maths Card -->
-        <androidx.cardview.widget.CardView
-            android:id="@+id/mathsCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            android:layout_margin="8dp">
+            <TextView
+                android:id="@+id/daily_task_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="monospace"
+                android:text="Daily task"
+                android:textSize="17dp"
+                android:textFontWeight="600"
+                android:textStyle="bold"
+                android:textColor="#3B4DB2"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/daily_class_video_card"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardElevation="4dp"
+                app:cardCornerRadius="8dp"
+                app:layout_columnWeight="1"
+                app:layout_rowWeight="1"
+                android:layout_margin="8dp"
+                android:background="#abd7a6"
+                app:layout_constraintTop_toBottomOf="@id/daily_task_text"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#fff"
+                    android:padding="10dp">
+
+                   <ImageView
+                       android:layout_width="50dp"
+                       android:layout_height="50dp"
+                       app:layout_constraintTop_toTopOf="parent"
+                       app:layout_constraintLeft_toLeftOf="parent"
+                       app:layout_constraintBottom_toBottomOf="parent"
+                       android:src="@drawable/video_2"
+                       android:id="@+id/daily_task_image"
+                       />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:layout_marginLeft="12dp"
+                        app:layout_constraintLeft_toRightOf="@id/daily_task_image"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        android:text="Maths Relations and
+functions Class II tomorrow also"
+                        android:textSize="16dp"
+                        android:textFontWeight="600"
+                        android:textStyle="bold"
+                        android:textColor="#009688"
+                        />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <TextView
+        android:id="@+id/subjects_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="monospace"
+        android:textSize="17dp"
+        android:textFontWeight="600"
+
+        android:textStyle="bold"
+        android:text="Subjects"
+        android:textColor="#3B4DB2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@id/daily_class_card" />
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/subjects_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="8dp"
+        app:layout_columnWeight="1"
+        app:layout_rowWeight="1"
+        android:layout_margin="8dp"
+        android:background="#000"
+        app:layout_constraintTop_toBottomOf="@id/subjects_text"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="20dp">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        android:padding="12dp"
+        android:background="#FFFFFF"
+        android:layout_marginTop="0dp">
+        
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                android:gravity="center_vertical">
-
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/mathsCard"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="4dp"
+                android:padding="6dp"
+                android:orientation="vertical">
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    app:cardCornerRadius="20dp">
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@android:drawable/ic_menu_edit"
-                    android:contentDescription="Maths Icon"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/maths"
+                    android:layout_gravity="center"
+                    android:background="#fff"/>
+                </androidx.cardview.widget.CardView>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
                     android:text="Maths"
-                    android:textSize="18sp"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+                    android:textSize="16dp"
+                    android:textFontWeight="600"
+                    android:textStyle="bold"
+                    android:textColor="#000"
+                    />
 
-        <!-- Physics Card -->
-        <androidx.cardview.widget.CardView
+            </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/physicsCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            android:layout_margin="8dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                android:gravity="center_vertical">
-
+            android:layout_weight="1"
+            android:padding="6dp"
+            android:layout_marginHorizontal="4dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:cardCornerRadius="20dp">
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@android:drawable/ic_menu_compass"
-                    android:contentDescription="Physics Icon"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/physics"
+                    android:layout_gravity="center"
+                    android:background="#fff"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Physics"
+                android:textSize="16dp"
+                android:textFontWeight="600"
+                android:textStyle="bold"
+                android:textColor="#000"
+                />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Physics"
-                    android:textSize="18sp"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-        <!-- Chemistry Card -->
-        <androidx.cardview.widget.CardView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_weight="1"
             android:id="@+id/chemistryCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            android:layout_margin="8dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                android:gravity="center_vertical">
-
+            android:padding="6dp"
+            android:layout_marginHorizontal="4dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:cardCornerRadius="20dp">
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@android:drawable/ic_menu_agenda"
-                    android:contentDescription="Chemistry Icon"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/chemistry"
+                    android:layout_gravity="center"
+                    android:background="#fff"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Chemistry"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:textFontWeight="600"
+                android:textStyle="bold"
+                android:textColor="#000"
+                />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Chemistry"
-                    android:textSize="18sp"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-        <!-- Biology Card -->
-        <androidx.cardview.widget.CardView
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_weight="1"
             android:id="@+id/biologyCard"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
-            android:layout_margin="8dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="16dp"
-                android:gravity="center_vertical">
-
+            android:padding="6dp"
+            android:layout_marginHorizontal="4dp"
+            android:orientation="vertical">
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:cardCornerRadius="20dp">
                 <ImageView
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@android:drawable/ic_menu_gallery"
-                    android:contentDescription="Biology Icon"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/biology"
+                    android:layout_gravity="center"
+                    android:background="#fff"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Biology"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center"
+                android:textSize="16dp"
+                android:textFontWeight="600"
+                android:textStyle="bold"
+                android:textColor="#000"
+                />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Biology"
-                    android:textSize="18sp"
-                    android:textColor="@android:color/black"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
+        </LinearLayout>
 
-    </androidx.gridlayout.widget.GridLayout>
+
+
+    </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <!-- GridLayout for Subjects -->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
