--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -10,12 +11,216 @@
         android:id="@+id/playerView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_centerInParent="true"/>
+        android:layout_alignParentTop="true"
+        app:use_controller="false" /> <!-- Hide built-in controls -->
+
+    <!-- Your custom buttons below -->
+    <LinearLayout
+        android:id="@+id/player_controls_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_below="@id/playerView">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnRewind"
+            android:text="⏪" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnPlayPause"
+            android:text="⏸️" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnForward"
+            android:text="⏩" />
+    </LinearLayout>
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/test"
+        android:layout_below="@id/player_controls_layout"
+        android:text="Hai sachin"/>
+
+    <LinearLayout
+        android:id="@+id/controls_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/playerView"
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal"
+        android:padding="8dp">
+
+
+    </LinearLayout>
+
+    <!-- Option Containers -->
+    <LinearLayout
+        android:id="@+id/options_container_4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/controls_layout"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:gravity="center"
+        android:padding="8dp">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option_a"
+            android:text="A"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option_b"
+            android:text="B"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option_c"
+            android:text="C"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option_d"
+            android:text="D"/>
+</LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/options_container_3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/options_container_4"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:gravity="center"
+        android:padding="8dp">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option3_a"
+            android:text=""/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option3_b"
+            android:text=""/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option3_c"
+            android:text=""/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/options_container_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/options_container_3"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:gravity="center"
+        android:padding="8dp">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option2_a"
+            android:text="A"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/option2_b"
+            android:text="B"/>
+
+
+    </LinearLayout>
+
+    <!-- Clarity Container -->
+    <LinearLayout
+        android:id="@+id/clarity_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/options_container_2"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:padding="8dp">
+
+        <ImageButton
+            android:id="@+id/option_clear"
+            android:src="@drawable/correct"
+            android:contentDescription="Clear"
+            android:background="@null"  android:layout_height="30dp"
+            android:layout_width="30dp"/>
+
+        <ImageButton
+            android:id="@+id/option_not_clear"
+            android:src="@drawable/wrong"
+            android:contentDescription="Not Clear"
+            android:layout_height="30dp"
+            android:layout_width="30dp"/>
+    </LinearLayout>
+
+    <!-- Boolean Container -->
+    <LinearLayout
+        android:id="@+id/boolean_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/clarity_container"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:padding="8dp">
+
+        <ImageButton
+            android:id="@+id/option_yes"
+            android:src="@drawable/ic_play"
+            android:contentDescription="Yes"
+            android:background="@null"  android:layout_height="30dp"
+            android:layout_width="30dp"/>
+
+        <ImageButton
+            android:id="@+id/option_not"
+            android:src="@drawable/ic_rewind"
+            android:contentDescription="Not"
+            android:background="@null"  android:layout_height="30dp"
+            android:layout_width="30dp"/>
+    </LinearLayout>
 
 
 
+    <!-- Loading Screen -->
+<!--    <RelativeLayout-->
+<!--        android:id="@+id/loading_screen"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:background="#80000000"-->
+<!--        android:gravity="center">-->
 
+<!--        <ProgressBar-->
+<!--            android:id="@+id/progress_bar"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content" />-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/progress_bar"-->
+<!--            android:text="Loading, please wait..."-->
+<!--            android:textColor="#fff"-->
+<!--            android:layout_marginTop="16dp"-->
+<!--            android:layout_centerHorizontal="true" />-->
+<!--    </RelativeLayout>-->
+
+</RelativeLayout>
